syntax = "proto3";

option csharp_namespace = "LWS_Authentication";

package lws_authentication;

enum ResultCode {
  UNKNOWN = 0;
  SUCCESS = 1;
  DUPLICATE = 2;
  FORBIDDEN = 3;
  NOTFOUND = 4;
}

message Result {
  ResultCode resultCode = 1;
  string content = 2;
  string message = 3;
}

message RegisterRequestMessage {
  string userEmail = 1;
  string userPassword = 2;
}

message LoginRequestMessage {
  string userEmail = 1;
  string userPassword = 2;
}

message AuthenticateUserMessage {
  string userToken = 1;
}

service AuthenticationRpc {
  rpc RegisterRequest (RegisterRequestMessage) returns (Result);
  rpc LoginRequest (LoginRequestMessage) returns (Result);
  rpc AuthenticateUserRequest (AuthenticateUserMessage) returns (Result);
}
